--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.7.0"
+    "react-scripts": "0.7.0",
+    "redux-devtools": "^3.3.1",
+    "redux-logger": "^2.7.4"
   },
   "dependencies": {
+    "base64url": "^2.0.0",
+    "immutability-helper": "^2.0.0",
+    "lodash": "^4.17.2",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-redux": "^4.4.6",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
